--- a/404.html
+++ b/404.html
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: 404 - Page not found
+title: 404 - Seite nicht gefunden!
 permalink: /404.html
 ---
 
 <div class="text-center">
-  <h1>Whoops, this page doesn't exist.</h1>
-  <h1>Move along. (404 error)</h1>
+  <h1>Ehm... das hier sollte eigentlich nicht passieren...</h1>
+  <h1>*räusper* BITTE GEHEN SIE WEITER HIER GIBT ES NICHTS ZU SEHEN! (404 error)</h1>
   <br/>
 
   <img src="{{ 'assets/img/404-southpark.jpg' | relative_url }}" alt="Not found" />
