--- a/404.html
+++ b/404.html
@@ -6,8 +6,8 @@ permalink: /404.html
 
 <div class="text-center">
   <h1>Ehm... das hier sollte eigentlich nicht passieren...</h1>
-  <h1>*räusper* BITTE GEHEN SIE WEITER HIER GIBT ES NICHTS ZU SEHEN! (404 error)</h1>
+  <h2>*räusper* BITTE GEHEN SIE WEITER HIER GIBT ES NICHTS ZU SEHEN! (404 error)</h2>
   <br/>
 
-  <img src="{{ 'assets/img/404-southpark.jpg' | relative_url }}" alt="Not found" />
+  <iframe src="https://giphy.com/embed/26FPt1fG0ioYIR35C" width="480" height="255" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/solarimpulse-26FPt1fG0ioYIR35C">via GIPHY</a></p>
 </div>
